# PMO-Dock

./: .env_vars  .gitignore  README.md  pyproject.toml
benchmark/: __init__.py  actives_loader.py  benchmark_timer.py  paths.py  rewards.py  tasks.py
benchmark/computers/: __init__.py  property_computers.py  simulated_properties.py
benchmark/docking_oracle/: __init__.py  docking.py  docking_vina_client.py  local_docking.py  oracle_app.py
benchmark/metrics/: __init__.py  task_metrics.py
benchmark/synthesizability/: __init__.py  sa_score.py  sascorer.py
genetic_chemalactica/: __init__.py  genetic_runner.py  logging_.py  main.py  submitit_genetic_hparam_split.py
genetic_chemalactica/env/: bind_pred_env.yml  environment.yml
genetic_chemalactica/genetic/: genetic_utils.py  run.py
genetic_chemalactica/oracles/: __init__.py  binding_predictors.py  guacamol.py  oracle.py  oracles_app.py  property_computers.py  simulated_properties.py
genetic_chemalactica/utils/: __init__.py  compute_metrics.py  file.py  fit.py  generation.py  mol.py  molecule_assets.py  rewards.py  tasks.py
genetic_gfn/multi_objective/: gen_gfn_hit_runner.py  gen_gfn_lead_runner.py  (+6 more)
genmol/: MODEL_CARD.md  README.md  check_incomplete_genmol.py  find_incomplete_hparam_csvs.py  genmol_hit_runner.py  genmol_lead_runner.py  submitit_genmol_hit.py  submitit_genmol_lead.py
saturn/: check_incomplete_oracle.py  environment.yml  saturn.py  saturn_hit_runner.py  saturn_lead_runner.py  setup.sh  submitit_saturn_hit.py  submitit_saturn_lead.py
utils/: export_lead_top1_scores.py  genetic_padding.py
(+92 files in other folders)
